<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/nameAcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/nameAcount"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imgUser"
                android:layout_width="210dp"
                android:layout_height="187dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/pc_master_race" />


            <!--Button
                android:id="@+id/cambiarFoto"
                android:layout_width="140dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:drawableLeft="@android:drawable/stat_sys_upload_done"
                android:text="@string/cambiarFoto"
                android:textColor="#FFFFFF" /-->

            <TextView
                android:id="@+id/plataformasDeJuego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/icon_videogamen"
                android:drawablePadding="6dp"
                android:text="@string/plataformas"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/SteamTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="52dp"
                android:text="Steam"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextSteam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="id#Steam" />

            <TextView
                android:id="@+id/battlenetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="BattleNet"
                android:textColor="#000000"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTextBattlenet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="id#BattleNet" />

            <TextView
                android:id="@+id/OriginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="Origin"
                android:textColor="#000000"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTextOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="id#Origin" />

            <Button
                android:id="@+id/actualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="60dp"
                android:drawableLeft="@drawable/icon_save"
                android:drawableTint="@android:color/white"
                android:text="@string/actualizarDatos"
                android:textColor="#FFFFFF"
                tools:layout_marginBottom="30dp" />

            <Button
                android:id="@+id/cerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/icon_exit"
                android:drawableTint="@android:color/white"
                android:text="@string/cerrarSesion"
                android:textColor="#FFFFFF"
                tools:layout_marginBottom="5dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>