<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragmentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="367dp"
                android:layout_height="145dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="TextView"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="TextView"
                android:textSize="14sp"
                android:textStyle="italic"
                tools:layout_gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/localizacionString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/icon_location"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/localizacionString"
                android:textStyle="bold" />

            <fragment
                android:id="@+id/mapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="178dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                tools:layout_gravity="center" />

            <TextView
                android:id="@+id/urlStreamingString"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/icon_streaming"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/urlStreamingString"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/urlStreaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:autoLink="web"
                android:text="url"
                android:textColor="#3F51B5"
                android:textColorLink="#3F51B5"
                android:textSize="24sp"
                android:textStyle="bold" />

            <WebView
                android:id="@+id/webViewNotice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/inscribirse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/inscribeme"
                android:textColor="#FFFFFF"
                tools:layout_marginBottom="30dp" />

            <TextView
                android:id="@+id/flag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>